# devteam

./: .env.example  .gitignore  AI_READING_ORDER.md  CLAUDE.md  DIGITATIVA_STRATEGIC_ROADMAP.md  Implementation_rules.md  Makefile  PRODUCTION_QUICKSTART.md  README.md  README_CONTRACT_TESTING.md  ROLLBACK_TEMPORARY_CHANGES.md  SYSTEM_OVERVIEW.md  TEAM_PIPELINE_ACTION_PLAN.md  TEST_STRATEGY.md  TROUBLESHOOTING_QUICKREF.md  create_test_issue.py  demo_test.py  devteam.code-workspace  example_production_feature.md  git_demo_test.py  pm_test_output.json  production_e2e_test.py  production_e2e_test_relaxed.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.in  requirements.txt  run_e2e_test.py  run_mock_test.py  run_team.sh  simple_test.py  start_production_pipeline.py  template-enhancement-summary.md  test_feature_request.md  test_full_pipeline.py  test_game_designer.py  test_github_issue.md  test_github_issue_mock.json  test_issue_25.py  (+1 more)
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_approval.md  feature_request.md
.github/workflows/: contract-validation.yml
data/learning/: pm_learning.db
data/stakeholder/: stakeholder_relationships.db
docs/: CONTRACT_TESTING.md  end_to_end_test_plan.md  integration_status_report.md
docs/analysis/: STORY-GH-1001_feature_analysis.json  STORY-GH-24_feature_analysis.json  STORY-GH-25_feature_analysis.json  STORY-WORKFLOW-001_feature_analysis.json  STORY-kommunal-onboarding-1_feature_analysis.json
docs/breakdown/: STORY-GH-1001_story_breakdown.json  STORY-GH-24_story_breakdown.json  STORY-GH-25_story_breakdown.json  STORY-WORKFLOW-001_story_breakdown.json  STORY-kommunal-onboarding-1_story_breakdown.json
docs/contracts/: agent_contract_schema.json  github_issue_validation.md
docs/enhancements/: developer_dna_compliance.md  developer_test_strategy_compliance.md
docs/prompts/: contract_model_prompts.md  developer_implementation_instructions.md  dna_validation_prompts.md  eventbus_integration_prompts.md  project_manager_final_integration.md
docs/qa_reports/: None_accessibility.json  None_ux_validation.md
docs/specs/: component_mapping_STORY-GH-25.json  component_mapping_STORY-TEST-001.json  component_mapping_STORY-WORKFLOW-001.json  game_design_STORY-GH-25.md  game_design_STORY-TEST-001.md  game_design_STORY-WORKFLOW-001.md  ux_specification_STORY-GH-25.md  ux_specification_STORY-TEST-001.md  ux_specification_STORY-WORKFLOW-001.md
docs/stories/: STORY-GH-1001_description.md  STORY-GH-24_description.md  STORY-GH-25_description.md  STORY-WORKFLOW-001_description.md  STORY-kommunal-onboarding-1_description.md
docs/templates/: project_manager_communication.md
docs/testing/: end_to_end_pipeline_strategy.md
docs/wireframes/: STORY-GH-25_wireframes.json  STORY-TEST-001_wireframes.json  STORY-WORKFLOW-001_wireframes.json
docs/workflows/: feature_approval_workflow.md
modules/: __init__.py
scripts/: simple_contract_test.py  validate_contracts.py
tests/: README.md  __init__.py
(+130 files in other folders)
